[package]
name = "iml"
version = "0.1.0"
authors = ["Ivan Temchenko <[ivan.vb030@simplelogin.com]>"]
description = "Inverted Microledger substrate contract"
license = "Licensed under the EUPL-1.2-or-later"
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.0.1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
